committed in mybranch

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
     <body>
         <p>this is my in-staging html page</p>
         <p>this is paragraph</p>
+        <p>this paragraph was added in-my branch</p>
     </body>
 </html>
